Provided head message

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title> Welcome to our Webpage </title>
     </head>
 <body>
-    <h3> Please enter your name </h3>
+    <h1>Hello Welcome</h1>
+    <h3> Please enter your name: </h3>
     <input type="text" name="uname">
 </html>
