--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Welcome to our Webpage </title>
+        <title> Welcome to our Web page. </title>
     </head>
 <body>
     <h1>Hello Welcome</h1>
