Thanked the user

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title> Welcome to our Web page. </title>
     </head>
 <body>
-    <h1>Hello Welcome</h1>
     <h3> Please enter your name: </h3>
     <input type="text" name="uname">
+    <p>thank you.</p>
 </html>
