--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title> Welcome to our Web page. </title>
     </head>
 <body>
+    <a href="about.html">About</a>
     <h3> Please enter your name: </h3>
     <input type="text" name="uname">
-    <p>thank you.</p>
+    <p>thank you</p>
 </html>
