Renamed about.html to aboutus.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,7 @@
     </head>
 <body>
     <h1>About this web application</h1>
-    <h3>Thanks</h3>
+    <h3>Thank You.</h3>
+    <h2>Wel - come</h2>
 </body>
 </html>
