Restored aboutus.html name

--- a/mypage.html
+++ b/mypage.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title>About the web application</title>
@@ -6,5 +7,6 @@
     <h1>About this web application</h1>
     <h3>Thank You.</h3>
     <h2>Wel - come</h2>
+    <a href="index.html">Back</a>
 </body>
 </html>
