Finished index.html

--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <h3> Please enter your name: </h3>
     <input type="text" name="uname">
     <p>thank you</p>
+    <small> Copyright some company 2022 </small>
 </html>
