--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
+
 <html>
     <head>
         <title> Welcome to our Web page. </title>
     </head>
 <body>
+    <nav>
+        <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="about.html">About</li>
+        </ul>
+   </nav>
     <a href="about.html">About</a>
     <h3> Please enter your name: </h3>
     <input type="text" name="uname">
