Added Bootstrap Styling

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-
 <html>
     <head>
         <title> Welcome to our Web page. </title>
+	<link rel=“stylesheet” href=“css/bootstrap.min.css”>
     </head>
 <body>
     <nav>
         <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="about.html">About</li>
+                <li><a href="about.html">About</a></li>
+		<li><a href="privacy.html">Privacy</a></li>
+
         </ul>
    </nav>
-    <a href="about.html">About</a>
-    <h3> Please enter your name: </h3>
-    <input type="text" name="uname">
-    <p>thank you</p>
+   	<div  class=“container”>
+    		<a href="about.html">About</a>
+    		<h3> Please enter your name: </h3>
+    		<input type="text" name="uname">
+    		<p>thank you</p>
+	</div>
     <small> Copyright some company 2022 </small>
+</body>    
 </html>
