--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <html>
     <head>
         <title> Welcome to our Web page. </title>
-	<link rel=“stylesheet” href=“css/bootstrap.min.css”>
+
+        <link rel=“stylesheet” href=“css/bootstrap.min.css”>
     </head>
 <body>
     <nav>
         <ul>
                 <li><a href="about.html">About</a></li>
-		<li><a href="privacy.html">Privacy</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
 
         </ul>
    </nav>
-   	<div  class=“container”>
-    		<a href="about.html">About</a>
-    		<h3> Please enter your name: </h3>
-    		<input type="text" name="uname">
-    		<p>thank you</p>
-	</div>
+        <div  class=“container”>
+                <div class="row">
+                        <a href="about.html">about</a>
+                </div>
+                
+                <h1> Hello </h1>
+                <h3> Please enter your name: </h3>
+                <input type="text" name="uname">
+
+        </div>
     <small> Copyright some company 2022 </small>
 </body>    
 </html>
