--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </ul>
    </nav>
         <div  class=“container”>
-                <div class="row">
+                <div class="row" id="about">
                         <a href="about.html">about</a>
                 </div>
                 
