--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
                 <li><a href="about.html">About</a></li>
                 <li><a href="privacy.html">Privacy</a></li>
-
+		<li><a href=“contactus.html">Contact Us</a></li>
         </ul>
    </nav>
         <div  class=“container”>
